# nextjs

coffee-blockchain/: Dockerfile  create_tables.js  gen_key.js  migrate_to_supabase.js  package-lock.json  package.json  supabase_schema.sql
coffee-blockchain/contracts/: Anchor.toml  Cargo.toml  deploy.js
coffee-blockchain/contracts/idl/: coffee_payment.js
coffee-blockchain/contracts/programs/coffee-payment/: Cargo.toml
coffee-blockchain/contracts/programs/coffee-payment/src/: lib.rs
coffee-blockchain/src/app/: globals.css  layout.jsx
coffee-blockchain/src/app/dashboard/: page.jsx
coffee-blockchain/src/app/farmers/: page.jsx
coffee-blockchain/src/app/login/: page.jsx
coffee-blockchain/src/app/market/: page.jsx
coffee-blockchain/src/app/markets/: page.jsx
coffee-blockchain/src/app/profile/: page.jsx
coffee-blockchain/src/app/register/: page.jsx
coffee-blockchain/src/app/shop/: layout.jsx  page.jsx
coffee-blockchain/src/app/supply-chain/: page.jsx
coffee-blockchain/src/app/transactions/: page.jsx
coffee-blockchain/src/app/verify-email/: page.jsx
coffee-blockchain/src/app/wallet/: page.jsx
coffee-blockchain/src/components/DashboardLayout/: DashboardLayout.jsx  DashboardLayout.module.css
coffee-blockchain/src/components/Header/: Header.jsx  Header.module.css
coffee-blockchain/src/components/Sidebar/: Sidebar.jsx  Sidebar.module.css
coffee-blockchain/src/context/: AuthContext.jsx  ThemeContext.jsx
coffee-blockchain/src/lib/: auth.js  contractConfig.js  db.js  email.js  phantom.js  sdb.js  solana.js  supabase.js
(+47 files in other folders)
