[package]
name = "coffee-payment"
version = "0.1.0"
description = "CoffeeChain — Smart Contract Pembayaran Kopi di Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "coffee_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
